# Advent-of-Code-2022

./: .gitignore  CMakeLists.txt  README.md  new_day.sh
week_1/day_01/: day_01.cpp
week_1/day_02/: README.md  day_02.cpp
week_1/day_03/: README.md  day_03.cpp
week_1/day_04/: day_04.cpp
week_1/day_05/: README.md  day_05.cpp
week_1/day_06/: README.md  day_06.cpp
week_1/day_07/: day_07.cpp
week_2/day_08/: day_08.cpp
week_2/day_09/: day_09.cpp
week_2/day_10/: day_10.cpp
week_2/day_11/: day_11.cpp
week_2/day_12/: README.md  day_12.cpp
week_2/day_13/: day_13.cpp
week_3/day_14/: day_14.cpp
week_3/day_15/: README.md  day_15.cpp
week_3/day_16/: README.md  day_16.cpp
week_3/day_17/: day_17.cpp
week_3/day_18/: day_18.cpp
week_3/day_19/: day_19.cpp
week_3/day_20/: day_20.cpp
week_4/day_21/: day_21.cpp
week_4/day_22/: day_22.cpp  test
week_4/day_23/: day_23.cpp
week_4/day_24/: day_24.cpp
week_4/day_25/: day_25.cpp
